customer essential completed